--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -26,6 +26,7 @@
 @import "components/section-grid";
 @import "components/divider-section";
 @import "components/cabins-grid";
+@import "components/loading-splash";
 // Layouts
 @import "layout/nav";
 @import "layout/footer";
