--- a/assets/sass/components/_loading-splash.scss
+++ b/assets/sass/components/_loading-splash.scss
@@ -55,7 +55,7 @@
 }
 
 .loading-splash.hidden {
-	animation: hide 500ms ease-in 1 forwards;
+	animation: hide 500ms 2s ease-in 1 forwards;
 }
 @keyframes hide {
 	0% {
