--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21212,7 +21212,7 @@ p {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
